# iQual

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  LICENSE  LICENSE.html  LICENSE.md  README.html  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: gh-pages.yml  static.yml
_sources/: LICENSE.md  README.md
_sources/notebooks/: Getting Started.ipynb  Model Training.ipynb  README.md
docs/: _config.yml  _toc.yml  requirements.txt
docs/notebooks/: README.md
examples/Aspirations/: Model Fitting - Single Annotation.ipynb  Name Masking [DEV].ipynb  Tests - Bias.ipynb  Tests - Interpretability.ipynb
notebooks/: BiasTest.ipynb  EfficiencyTest.ipynb  Getting Started.html  Interpretability - N_h.ipynb  InterpretabilityTest.ipynb  Interpretability_Increasing_N_H.ipynb  Model Training.html  Model Training.ipynb  Model-Bootstrap.ipynb  Model-MultipleAnnotations.ipynb  Model-MultipleClassifiers.ipynb  Model-MultipleVectorizers.ipynb  Model-SavedDictionary.ipynb  ModelFitting_SavedDictionary.ipynb  ModelFitting_SentenceTransformers.ipynb  ModelFitting_SpaCy.ipynb  Model_MultipleAnnotations.ipynb  Model_MultipleClassifiers.ipynb  Model_MultipleVectorizers.ipynb  Model_SingleAnnotation.ipynb  Model_SingleAnnotation.nbconvert.ipynb  README.html  README.md  RegressionCoefficientTest.ipynb
notebooks/Tests/: Distribution of regression coefficients.ipynb  (+3 more)
src/: crossval.py  estimation.py  evaluation.py  feature_transform.py  nlpmodel.py  preprocessing.py  tests.py  utils.py  vectorizers.py
(+66 files in other folders)
