[metadata]
name = iQual
author = Aditya Karan Chhabra
author_email = aditya0chhabra@gmail.com
maintainer = Aditya Karan Chhabra
maintainer_email = aditya0chhabra@gmail.com
version = 0.1.0
description = 
long_description = file: README.md, LICENSE
keywords = World Bank
license = World Bank Master Community License Agreement
classifiers =
    Programming Language :: Python :: 3
    License :: World Bank Master Community License Agreement
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pycountry>=22.3.5

[options.packages.find]
where=src